# redish

./: Redish.cabal
src/: Main.hs
test/: Spec.hs
