name:                Redish
version:             0.5.0
synopsis:            A simple, Redis-inspired, key-value store
license:             BSD3
license-file:        LICENSE
author:              Honza Pokorny
maintainer:          me@honza.ca
homepage:            https://github.com/honza/redish
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Redish
  build-depends:     base, stm, network, containers, mtl, transformers,
                     attoparsec, bytestring
  Ghc-Options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language:  Haskell2010

executable Redish
  main-is:           src/Main.hs
  build-depends:     base, Redish
  Ghc-Options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language:  Haskell2010

test-suite hspec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base, hspec, Redish
  Ghc-Options:       -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  Default-language:  Haskell2010
